# Tranding_AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
alembic/: env.py
alembic/versions/: 3aaabeb0e950_initial_schema_27_tables.py  add_performance_indexes.py
atlas/: __init__.py  config.py  constants.py  enums.py  events.py  exceptions.py  i18n.py
atlas/application/: backtest_engine.py  conclusion_engine.py  daily_backtest.py  paper_trading.py  realtime_radar.py  risk_simulator.py  scheduler.py  screener_engine.py  smart_screener.py  workflow_engine.py
atlas/domain/: __init__.py  breadth.py  fund_flow.py  fx_factor.py  industry_analyzer.py  international.py  market_regime.py  portfolio.py  sentiment.py  trading_calendar.py  universe.py
atlas/infrastructure/: __init__.py  cache.py  (+10 more)
docker/: Dockerfile  docker-compose.monitoring.yml  docker-compose.prod.yml  entrypoint.sh  nginx.conf  prometheus.yml
docs/: 01_PROJECT_CHARTER.md  02_SRS.md  03_ARCHITECTURE.md  04_DB_SCHEMA.md  05_API_SPEC.md  API.md  DATA_SOURCES.md  DEPLOY.md  PROGRESS.md  reference_analysis.md  台股每日盤後選股SOP.docx  台股選股策略池_v3.xlsx  系統架構設計文件.docx  資料庫Schema設計.xlsx
models/: atlas_rf.joblib
scripts/: backup_db.sh  benchmark.py  retrain_model.sh  seed_data.py  train_model.py  verify_e2e.py
tests/: conftest.py
參考來源/: Atlas_使用者操作手冊.html  Atlas_系統介紹.html  introduction.html  system_intro.html  system_introduction.html
(+102 files in other folders)
