[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-trading"
version = "5.0.0-alpha"
description = "Atlas Trading System v5.0 — 高勝率量化交易決策系統"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.35",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.22",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "requests>=2.32",
    "httpx>=0.27",
    "yfinance>=0.2",
    "scikit-learn>=1.5",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "pyotp>=2.9",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
full = [
    "asyncpg>=0.29",
    "ta-lib>=0.5;platform_system!='Windows'",
    "discord.py>=2.3",
    "line-bot-sdk>=3.0",
    "python-telegram-bot>=21.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["atlas"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
